--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!--Comienzo de la barra de navegacion-->
 
     <nav id="Contacto">
-      <div class="hamburguesa"><i class="fas fa-bars"></i></div> 
+      <div class="hamburguesa"><i class="fas fa-bars fa-3x"></i></div> 
         <ul class="barra-navegacion">
             <a href="#Presentacion">
                 <li class="link-nav">HOLA</li>
@@ -109,10 +109,10 @@
         <div class="contenedor-links-proyectos">
 
             <ul class="links-navegacion-proyectos">
-                <li><button class="boton-proyecto>TODOS</button></li>
-                <li class="link">HTML/CSS</li>
-                <li class="link">JavaScript</li>
-                <li class="link">React</li>
+                <li><button class="boton-proyecto">TODOS</button></li>
+                <li class="link-pro">HTML/CSS</li>
+                <li class="link-pro">JavaScript</li>
+                <li class="link-pro">React</li>
             </ul>
 
         </div>
