Cambios de color, agregadoo de outline

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!--Comienzo de la barra de navegacion-->
 
     <nav id="Contacto">
-      <div class="hamburguesa"><i class="fas fa-bars fa-3x"></i></div> 
+      <div class="hamburguesa"><l><a><i class="fas fa-bars"></i></a></div> 
         <ul class="barra-navegacion">
             <a href="#Presentacion">
                 <li class="link-nav">HOLA</li>
@@ -106,13 +106,13 @@
 
         <h2>Mis proyectos</h2>
 
-        <div class="contenedor-links-proyectos">
+        <div>
 
             <ul class="links-navegacion-proyectos">
-                <li><button class="boton-proyecto">TODOS</button></li>
-                <li class="link-pro">HTML/CSS</li>
-                <li class="link-pro">JavaScript</li>
-                <li class="link-pro">React</li>
+                <a><li><button class="boton-proyecto">TODOS</button></li> <a></a>
+                <a><li class="link-pro">HTML/CSS</li></a>
+                <a><li class="link-pro">JavaScript</li></a>
+                <a><li class="link-pro">React</li></a>
             </ul>
 
         </div>
@@ -120,17 +120,17 @@
         <div class="contenedor-tarjetas-proyectos">
 
             <article class="tarjeta-proyectos">
-                <img src="./imagenes portfolio/portfolio.png" />
+                <img src="./imagenes portfolio/portfolio.png"/>
                 <p class="titulo-proyecto">PORTFOLIO</p>
             </article>
 
             <article class="tarjeta-proyectos">
-                <img src="./imagenes portfolio/tienda.png" />
+                <img src="./imagenes portfolio/tienda.png"/>
                 <p class="titulo-proyecto">TIENDA</p>
             </article>
 
             <article class="tarjeta-proyectos">
-                <img class="img-proyecto" src="./imagenes portfolio/juego de la memoria.png" />
+                <img class="img-proyecto" src="./imagenes portfolio/juego de la memoria.png"/>
                 <p class="titulo-proyecto">JUEGO DE LA MEMORIA</p>
             </article>
 
@@ -145,7 +145,7 @@
             </article>
 
             <article class="tarjeta-proyectos">
-                <img src="./imagenes portfolio/todo app.png" />
+                <img src="./imagenes portfolio/todo app.png"/>
                 <p class="titulo-proyecto">TODO APP</p>
             </article>
 
