--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <h2>Hola! Soy</h2>
             <h1>Maria Eugenia <br>Nuñez</br></h1>
             <p class="descripcion-personal">Química, desarrolladora y docente </p>
-           <a href="#Mis Proyectos"><button class="boton-conoceme">LO QUE HAGO</button></a> 
+           <a href="#Mis Proyectos" class="link-conoceme">LO QUE HAGO</a> 
         </div>
         <div class="contenedor-avatar">
             <img src="./imagenes portfolio/mujer portfolio2.png" />
