--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
            <a href="#Mis Proyectos" class="link-conoceme">LO QUE HAGO</a> 
         </div>
         <div class="contenedor-avatar">
-            <img src="./imagenes portfolio/mujer portfolio2.png" />
+            <img src="./imagenes portfolio/mujerportfolio3.png" />
         </div>
     </header>
 
