Arregle que se rompieron las imagenes por cambiar nombre de carpeta contenedora

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
            <a href="#Mis Proyectos" class="link-conoceme">LO QUE HAGO</a> 
         </div>
         <div class="contenedor-avatar">
-            <img src="./imagenes portfolio/mujerportfolio3.png" />
+            <img src="./imagenesPortfolio/mujerportfolio3.png" />
         </div>
     </header>
 
@@ -55,32 +55,32 @@
 
         <div class="contenedor-tarjetas-conocimientos">
             <article class="tarjeta">
-                <img src="./imagenes portfolio/html5.png" />
+                <img src="./imagenesPortfolio/html5.png" />
                 <p class="titulo-tarjeta">HTML5</p>
             </article>
 
             <article class="tarjeta">
-                <img src="./imagenes portfolio/css.png" />
+                <img src="./imagenesPortfolio/css.png" />
                 <p class="titulo-tarjeta">CSS</p>
             </article>
 
             <article class="tarjeta">
-                <img src="./imagenes portfolio/javascript.png" />
+                <img src="./imagenesPortfolio/javascript.png" />
                 <p class="titulo-tarjeta">JavaScript</p>
             </article>
 
             <article class="tarjeta">
-                <img src="./imagenes portfolio/sass.png" />
+                <img src="./imagenesPortfolio/sass.png" />
                 <p class="titulo-tarjeta">SASS</p>
             </article>
 
             <article class="tarjeta">
-                <img src="./imagenes portfolio/react.png" />
+                <img src="./imagenesPortfolio/react.png" />
                 <p class="titulo-tarjeta">REACT</p>
             </article>
 
             <article class="tarjeta">
-                <img src="./imagenes portfolio/git.png" />
+                <img src="./imagenesPortfolio/git.png" />
                 <p class="titulo-tarjeta">GIT</p>
             </article>
         </div>
@@ -120,37 +120,37 @@
         <div class="contenedor-tarjetas-proyectos">
 
             <article class="tarjeta-proyectos">
-                <img src="./imagenes portfolio/portfolio.png"/>
+                <img src="./imagenesPortfolio/portfolio.png"/>
                 <p class="titulo-proyecto">PORTFOLIO</p>
             </article>
 
             <article class="tarjeta-proyectos">
-                <img src="./imagenes portfolio/tienda.png"/>
+                <img src="./imagenesPortfolio/tienda.png"/>
                 <p class="titulo-proyecto">TIENDA</p>
             </article>
 
             <article class="tarjeta-proyectos">
-                <img class="img-proyecto" src="./imagenes portfolio/juego de la memoria.png"/>
+                <img class="img-proyecto" src="./imagenesPortfolio/juego de la memoria.png"/>
                 <p class="titulo-proyecto">JUEGO DE LA MEMORIA</p>
             </article>
 
             <article class="tarjeta-proyectos">
-                <img src="./imagenes portfolio/controlador de gastos.png" />
+                <img src="./imagenesPortfolio/controlador de gastos.png" />
                 <p class="titulo-proyecto">CONTROLADOR DE GASTOS</p>
             </article>
 
             <article class="tarjeta-proyectos">
-                <img src="./imagenes portfolio/calendar.png" />
+                <img src="./imagenesPortfolio/calendar.png" />
                 <p class="titulo-proyecto">ADMINISTRADOR DE REUNIONES</p>
             </article>
 
             <article class="tarjeta-proyectos">
-                <img src="./imagenes portfolio/todo app.png"/>
+                <img src="./imagenesPortfolio/todo app.png"/>
                 <p class="titulo-proyecto">TODO APP</p>
             </article>
 
             <article class="tarjeta-proyectos">
-                <img src="./imagenes portfolio/buscador de peliculas.png" />
+                <img src="./imagenesPortfolio/buscador de peliculas.png" />
                 <p class="titulo-proyecto">BUSCADOR DE PELICULAS</p>
             </article>
 
