ultima version por hoy

--- a/index.html
+++ b/index.html
@@ -120,38 +120,45 @@
         <div class="contenedor-tarjetas-proyectos">
 
             <article class="tarjeta-proyectos">
+                <a href="https://eugenunez.github.io/Portfolio-ADA-2020/">
                 <img src="./imagenesPortfolio/portfolio.png"/>
-                <p class="titulo-proyecto">PORTFOLIO</p>
+                <p class="titulo-proyecto">PORTFOLIO</p></a>
             </article>
 
             <article class="tarjeta-proyectos">
+                <a href="https://eugenunez.github.io/Portfolio-ADA-2020/">
                 <img src="./imagenesPortfolio/tienda.png"/>
-                <p class="titulo-proyecto">TIENDA</p>
+                <p class="titulo-proyecto">TIENDA</p></a>
             </article>
 
-            <article class="tarjeta-proyectos">
+           <article class="tarjeta-proyectos">
+            <a href="https://eugenunez.github.io/Portfolio-ADA-2020/">
                 <img class="img-proyecto" src="./imagenesPortfolio/juego de la memoria.png"/>
-                <p class="titulo-proyecto">JUEGO DE LA MEMORIA</p>
+                <p class="titulo-proyecto">JUEGO DE LA MEMORIA</p></a>
+            </article>
+
+           <article class="tarjeta-proyectos">
+            <a href="https://eugenunez.github.io/Portfolio-ADA-2020/">
+                <img src="./imagenesPortfolio/controlador de gastos.png"/>
+                <p class="titulo-proyecto">CONTROLADOR DE GASTOS</p></a>
             </article>
 
             <article class="tarjeta-proyectos">
-                <img src="./imagenesPortfolio/controlador de gastos.png" />
-                <p class="titulo-proyecto">CONTROLADOR DE GASTOS</p>
-            </article>
-
-            <article class="tarjeta-proyectos">
+                <a href="https://eugenunez.github.io/Portfolio-ADA-2020/">
                 <img src="./imagenesPortfolio/calendar.png" />
-                <p class="titulo-proyecto">ADMINISTRADOR DE REUNIONES</p>
+                <p class="titulo-proyecto">ADMINISTRADOR DE REUNIONES</p></a>
             </article>
 
             <article class="tarjeta-proyectos">
+                <a href="https://eugenunez.github.io/Portfolio-ADA-2020/">
                 <img src="./imagenesPortfolio/todo app.png"/>
-                <p class="titulo-proyecto">TODO APP</p>
+                <p class="titulo-proyecto">TODO APP</p></a>
             </article>
 
             <article class="tarjeta-proyectos">
+                <a href="https://eugenunez.github.io/Portfolio-ADA-2020/">
                 <img src="./imagenesPortfolio/buscador de peliculas.png" />
-                <p class="titulo-proyecto">BUSCADOR DE PELICULAS</p>
+                <p class="titulo-proyecto">BUSCADOR DE PELICULAS</p></a>
             </article>
 
         </div>
