--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <h2>Hola! Soy</h2>
             <h1>Maria Eugenia <br>Nuñez</br></h1>
             <p class="descripcion-personal">Química, desarrolladora y docente </p>
-           <a href="#Mis Proyectos" class="link-conoceme">LO QUE HAGO</a> 
+           <a href="#Mis Proyectos" class="link-loquehago">LO QUE HAGO</a> 
         </div>
         <div class="contenedor-avatar">
             <img src="./imagenesPortfolio/mujerportfolio3.png" />
@@ -50,7 +50,7 @@
     <section id="Mis conocimientos" class="conocimientos">
 
         <h2>Mis conocimientos</h2>
-        <p>Esto es lo que aprendi durante mi formacion</p>
+        <p>Esto es lo que aprendí durante mi formación</p>
 
 
         <div class="contenedor-tarjetas-conocimientos">
@@ -109,10 +109,10 @@
         <div>
 
             <ul class="links-navegacion-proyectos">
-                <a><li><button class="boton-proyecto">TODOS</button></li> <a></a>
-                <a><li class="link-pro">HTML/CSS</li></a>
-                <a><li class="link-pro">JavaScript</li></a>
-                <a><li class="link-pro">React</li></a>
+                <a href="#Mis Proyectos"><li class="boton-proyecto">TODOS</li></a>
+                <a href="#Mis Proyectos"><li class="link-pro">HTML/CSS</li></a>
+                <a href="#Mis Proyectos"><li class="link-pro">JavaScript</li></a>
+                <a href="#Mis Proyectos"><li class="link-pro">React</li></a>
             </ul>
 
         </div>
@@ -122,43 +122,43 @@
             <article class="tarjeta-proyectos">
                 <a href="https://eugenunez.github.io/Portfolio-ADA-2020/">
                 <img src="./imagenesPortfolio/portfolio.png"/>
-                <p class="titulo-proyecto">PORTFOLIO</p></a>
+                <p class="titulo-proyecto">Portfolio</p></a>
             </article>
 
             <article class="tarjeta-proyectos">
                 <a href="https://eugenunez.github.io/Portfolio-ADA-2020/">
                 <img src="./imagenesPortfolio/tienda.png"/>
-                <p class="titulo-proyecto">TIENDA</p></a>
+                <p class="titulo-proyecto">Tienda</p></a>
             </article>
 
            <article class="tarjeta-proyectos">
             <a href="https://eugenunez.github.io/Portfolio-ADA-2020/">
-                <img class="img-proyecto" src="./imagenesPortfolio/juego de la memoria.png"/>
-                <p class="titulo-proyecto">JUEGO DE LA MEMORIA</p></a>
+                <img src="./imagenesPortfolio/juego de la memoria.png"/>
+                <p class="titulo-proyecto">Juego de la Memoria</p></a>
             </article>
 
            <article class="tarjeta-proyectos">
             <a href="https://eugenunez.github.io/Portfolio-ADA-2020/">
                 <img src="./imagenesPortfolio/controlador de gastos.png"/>
-                <p class="titulo-proyecto">CONTROLADOR DE GASTOS</p></a>
+                <p class="titulo-proyecto">Controlador de Gastos</p></a>
             </article>
 
             <article class="tarjeta-proyectos">
                 <a href="https://eugenunez.github.io/Portfolio-ADA-2020/">
                 <img src="./imagenesPortfolio/calendar.png" />
-                <p class="titulo-proyecto">ADMINISTRADOR DE REUNIONES</p></a>
+                <p class="titulo-proyecto">Administrador de Reuniones</p></a>
             </article>
 
             <article class="tarjeta-proyectos">
                 <a href="https://eugenunez.github.io/Portfolio-ADA-2020/">
                 <img src="./imagenesPortfolio/todo app.png"/>
-                <p class="titulo-proyecto">TODO APP</p></a>
+                <p class="titulo-proyecto">Todo App</p></a>
             </article>
 
             <article class="tarjeta-proyectos">
                 <a href="https://eugenunez.github.io/Portfolio-ADA-2020/">
                 <img src="./imagenesPortfolio/buscador de peliculas.png" />
-                <p class="titulo-proyecto">BUSCADOR DE PELICULAS</p></a>
+                <p class="titulo-proyecto">Buscador de Películas</p></a>
             </article>
 
         </div>
