--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <!--Comienzo de la seccion FRASE MOTIVADORA-->
 
     <section class="seccion-frase">
-        <i class="fas fa-quote-right fa-5x color-icon-quotes"></i>
+        <i class="fas fa-quote-right icon-quotes"></i>
         <p class="frase">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi quaerat aspernatur
             laboriosam doloremque iste perspiciatis veniam culpa beatae magni quo natus nostrum, laudantium
             exercitationem sit minima aut totam praesentium aliquam.</p>
