--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <!--Comienzo de la barra de navegacion-->
 
     <nav id="Contacto">
-      <div class="hamburguesa"><l><a><i class="fas fa-bars"></i></a></div> 
+        <div class="hamburguesa">
+            <l><a><i class="fas fa-bars"></i></a>
+        </div>
         <ul class="barra-navegacion">
             <a href="#Presentacion">
                 <li class="link-nav">HOLA</li>
@@ -25,11 +27,13 @@
             <a href="#Mis Proyectos">
                 <li class="link-nav">PROYECTOS</li>
             </a>
-            <a href="#Contacto"><li class="link-nav-contacto">CONTACTO</li></a>
+            <a href="#Contacto">
+                <li class="link-nav-contacto">CONTACTO</li>
+            </a>
         </ul>
     </nav>
 
-<!--Fin de la barra de navegacion-->
+    <!--Fin de la barra de navegacion-->
     <!--Comienzo del Header-->
 
     <header class="contenido-encabezado" id="Presentacion">
@@ -37,7 +41,7 @@
             <h2>Hola! Soy</h2>
             <h1>Maria Eugenia <br>Nuñez</br></h1>
             <p class="descripcion-personal">Química, desarrolladora y docente </p>
-           <a href="#Mis Proyectos" class="link-loquehago">LO QUE HAGO</a> 
+            <a href="#Mis Proyectos" class="link-loquehago">LO QUE HAGO</a>
         </div>
         <div class="contenedor-avatar">
             <img src="./imagenesPortfolio/mujerportfolio3.png" />
@@ -92,10 +96,9 @@
 
     <section class="seccion-frase">
         <i class="fas fa-quote-right icon-quotes"></i>
-        <p class="frase">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi quaerat aspernatur
-            laboriosam doloremque iste perspiciatis veniam culpa beatae magni quo natus nostrum, laudantium
-            exercitationem sit minima aut totam praesentium aliquam.</p>
-        <p class="autor-frase">Someone</p>
+        <p class="frase">"El éxito es quererte a ti mismo, 
+            querer lo que haces, y querer el cómo lo haces."</p>
+        <p class="autor-frase">Maya Angelou</p>
     </section>
 
     <!--Fin de la seccion FRASE MOTIVADORA-->
@@ -109,10 +112,18 @@
         <div>
 
             <ul class="links-navegacion-proyectos">
-                <a href="#Mis Proyectos"><li class="boton-proyecto">TODOS</li></a>
-                <a href="#Mis Proyectos"><li class="link-pro">HTML/CSS</li></a>
-                <a href="#Mis Proyectos"><li class="link-pro">JavaScript</li></a>
-                <a href="#Mis Proyectos"><li class="link-pro">React</li></a>
+                <a href="#Mis Proyectos">
+                    <li class="boton-proyecto">TODOS</li>
+                </a>
+                <a href="#Mis Proyectos">
+                    <li class="link-pro">HTML/CSS</li>
+                </a>
+                <a href="#Mis Proyectos">
+                    <li class="link-pro">JavaScript</li>
+                </a>
+                <a href="#Mis Proyectos">
+                    <li class="link-pro">React</li>
+                </a>
             </ul>
 
         </div>
@@ -121,44 +132,51 @@
 
             <article class="tarjeta-proyectos">
                 <a href="https://eugenunez.github.io/Portfolio-ADA-2020/">
-                <img src="./imagenesPortfolio/portfolio.png"/>
-                <p class="titulo-proyecto">Portfolio</p></a>
+                    <img src="./imagenesPortfolio/portfolio.png" />
+                    <p class="titulo-proyecto">Portfolio</p>
+                </a>
             </article>
 
             <article class="tarjeta-proyectos">
                 <a href="https://eugenunez.github.io/Portfolio-ADA-2020/">
-                <img src="./imagenesPortfolio/tienda.png"/>
-                <p class="titulo-proyecto">Tienda</p></a>
-            </article>
-
-           <article class="tarjeta-proyectos">
-            <a href="https://eugenunez.github.io/Portfolio-ADA-2020/">
-                <img src="./imagenesPortfolio/juego de la memoria.png"/>
-                <p class="titulo-proyecto">Juego de la Memoria</p></a>
-            </article>
-
-           <article class="tarjeta-proyectos">
-            <a href="https://eugenunez.github.io/Portfolio-ADA-2020/">
-                <img src="./imagenesPortfolio/controlador de gastos.png"/>
-                <p class="titulo-proyecto">Controlador de Gastos</p></a>
+                    <img src="./imagenesPortfolio/tienda.png" />
+                    <p class="titulo-proyecto">Tienda</p>
+                </a>
             </article>
 
             <article class="tarjeta-proyectos">
                 <a href="https://eugenunez.github.io/Portfolio-ADA-2020/">
-                <img src="./imagenesPortfolio/calendar.png" />
-                <p class="titulo-proyecto">Administrador de Reuniones</p></a>
+                    <img src="./imagenesPortfolio/juego de la memoria.png" />
+                    <p class="titulo-proyecto">Juego de la Memoria</p>
+                </a>
             </article>
 
             <article class="tarjeta-proyectos">
                 <a href="https://eugenunez.github.io/Portfolio-ADA-2020/">
-                <img src="./imagenesPortfolio/todo app.png"/>
-                <p class="titulo-proyecto">Todo App</p></a>
+                    <img src="./imagenesPortfolio/controlador de gastos.png" />
+                    <p class="titulo-proyecto">Controlador de Gastos</p>
+                </a>
             </article>
 
             <article class="tarjeta-proyectos">
                 <a href="https://eugenunez.github.io/Portfolio-ADA-2020/">
-                <img src="./imagenesPortfolio/buscador de peliculas.png" />
-                <p class="titulo-proyecto">Buscador de Películas</p></a>
+                    <img src="./imagenesPortfolio/calendar.png" />
+                    <p class="titulo-proyecto">Administrador de Reuniones</p>
+                </a>
+            </article>
+
+            <article class="tarjeta-proyectos">
+                <a href="https://eugenunez.github.io/Portfolio-ADA-2020/">
+                    <img src="./imagenesPortfolio/todo app.png" />
+                    <p class="titulo-proyecto">Todo App</p>
+                </a>
+            </article>
+
+            <article class="tarjeta-proyectos">
+                <a href="https://eugenunez.github.io/Portfolio-ADA-2020/">
+                    <img src="./imagenesPortfolio/buscador de peliculas.png" />
+                    <p class="titulo-proyecto">Buscador de Películas</p>
+                </a>
             </article>
 
         </div>
@@ -169,10 +187,18 @@
     <footer class="pie" id="footer">
 
         <ul class="links-navegacion-footer">
-            <a href="#Presentacion"><li class="link-footer">HOLA</li></a>
-           <a href="#Mis conocimientos"><li class="link-footer">CONOCIMIENTOS</li></a>
-            <a href="#Mis Proyectos"><li class="link-footer">PROYECTOS</li></a>
-            <a href="#footer"><li class="link-footer-contacto">CONTACTO</li></a>
+            <a href="#Presentacion">
+                <li class="link-footer">HOLA</li>
+            </a>
+            <a href="#Mis conocimientos">
+                <li class="link-footer">CONOCIMIENTOS</li>
+            </a>
+            <a href="#Mis Proyectos">
+                <li class="link-footer">PROYECTOS</li>
+            </a>
+            <a href="#footer">
+                <li class="link-footer-contacto">CONTACTO</li>
+            </a>
         </ul>
         <a href="https://github.com/eugenunez"><i class="fab fa-github fa-3x icon-github"></i></a>
         <a href="https://www.instagram.com/eugenunez87"><i class="fab fa-instagram fa-3x icon-insta"></i></a>
