Adding Readme and favicon

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Portfolio Maria Eugenia Nuñez</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+    <link rel="shortcut icon" type="image/ico" href="favicon.ico">
 </head>
 
 <body>
@@ -54,7 +55,7 @@
     <section id="Mis conocimientos" class="conocimientos">
 
         <h2>Mis conocimientos</h2>
-        <p>Esto es lo que aprendí durante mi formación</p>
+        <p class="info-conocimientos">Esto es lo que aprendí durante mi formación</p>
 
 
         <div class="contenedor-tarjetas-conocimientos">
@@ -203,7 +204,7 @@
         <a href="https://github.com/eugenunez"><i class="fab fa-github fa-3x icon-github"></i></a>
         <a href="https://www.instagram.com/eugenunez87"><i class="fab fa-instagram fa-3x icon-insta"></i></a>
         <a href="https://www.facebook.com/eugenunez87"><i class="fab fa-facebook fa-3x icon-face"></i></a>
-        <p class="frase-footer">Hecho con <i class="fas fa-heart icon-heart"></i> por una estudiante de ADA</p>
+        <p>Hecho con <i class="fas fa-heart icon-heart"></i> por una estudiante de ADA</p>
 
     </footer>
 
