--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="saludo">
             <h2>Hola! Soy</h2>
             <h1>Maria Eugenia <br>Nuñez</br></h1>
-            <p class="descripcion-personal">Química, futura docente y Frontend Developer </p>
+            <p class="descripcion-personal">Química, futura docente y desarrolladora Front-End  </p>
             <a href="#Mis Proyectos" class="link-loquehago">LO QUE HAGO</a>
         </div>
         <div class="contenedor-avatar">
