--- a/index.html
+++ b/index.html
@@ -207,5 +207,7 @@
         <p>Hecho con <i class="fas fa-heart icon-heart"></i> por una estudiante de ADA</p>
 
     </footer>
+    <!--Fin del FOOTER-->
 
 </body>
+</html>
