Se agrega archivos js

--- a/index.html
+++ b/index.html
@@ -111,19 +111,18 @@
         <h2>Mis proyectos</h2>
 
         <div>
-
             <ul class="links-navegacion-proyectos">
                 <a href="#Mis Proyectos">
-                    <li class="boton-proyecto">TODOS</li>
+                    <li><button class="link-pro" data-="">TODOS</button></li>
                 </a>
                 <a href="#Mis Proyectos">
-                    <li class="link-pro">HTML/CSS</li>
+                    <li><button class="link-pro">HTML/CSS</button></li>
                 </a>
                 <a href="#Mis Proyectos">
-                    <li class="link-pro">JavaScript</li>
+                    <li><button class="link-pro">JavaScript</button></li>
                 </a>
                 <a href="#Mis Proyectos">
-                    <li class="link-pro">React</li>
+                    <li><button class="link-pro">React</button></li>
                 </a>
             </ul>
 
@@ -131,49 +130,56 @@
 
         <div class="contenedor-tarjetas-proyectos">
 
-            <article class="tarjeta-proyectos">
+            <article class="tarjeta-proyectos"
+            data-categoria="html">
                 <a href="https://eugenunez.github.io/Portfolio-ADA-2020/">
                     <img src="./imagenesPortfolio/portfolio.png" />
                     <p class="titulo-proyecto">Portfolio</p>
                 </a>
             </article>
 
-            <article class="tarjeta-proyectos">
+            <article class="tarjeta-proyectos"
+            data-categoria="Javascript">
                 <a href="https://eugenunez.github.io/Portfolio-ADA-2020/">
                     <img src="./imagenesPortfolio/tienda.png" />
                     <p class="titulo-proyecto">Tienda</p>
                 </a>
             </article>
 
-            <article class="tarjeta-proyectos">
+            <article class="tarjeta-proyectos"
+            data-categoria="Javascript">
                 <a href="https://eugenunez.github.io/Portfolio-ADA-2020/">
                     <img src="./imagenesPortfolio/juego de la memoria.png" />
                     <p class="titulo-proyecto">Juego de la Memoria</p>
                 </a>
             </article>
 
-            <article class="tarjeta-proyectos">
+            <article class="tarjeta-proyectos"
+            data-categoria="Javascript">
                 <a href="https://eugenunez.github.io/Portfolio-ADA-2020/">
                     <img src="./imagenesPortfolio/controlador de gastos.png" />
                     <p class="titulo-proyecto">Controlador de Gastos</p>
                 </a>
             </article>
 
-            <article class="tarjeta-proyectos">
+            <article class="tarjeta-proyectos"
+            data-categoria="Javascript">
                 <a href="https://eugenunez.github.io/Portfolio-ADA-2020/">
                     <img src="./imagenesPortfolio/calendar.png" />
                     <p class="titulo-proyecto">Administrador de Reuniones</p>
                 </a>
             </article>
 
-            <article class="tarjeta-proyectos">
+            <article class="tarjeta-proyectos"
+            data-categoria="React">
                 <a href="https://eugenunez.github.io/Portfolio-ADA-2020/">
                     <img src="./imagenesPortfolio/todo app.png" />
                     <p class="titulo-proyecto">Todo App</p>
                 </a>
             </article>
 
-            <article class="tarjeta-proyectos">
+            <article class="tarjeta-proyectos"
+            data-categoria="React">
                 <a href="https://eugenunez.github.io/Portfolio-ADA-2020/">
                     <img src="./imagenesPortfolio/buscador de peliculas.png" />
                     <p class="titulo-proyecto">Buscador de Películas</p>
@@ -208,6 +214,6 @@
 
     </footer>
     <!--Fin del FOOTER-->
-
+<script src="index.js"></script>
 </body>
 </html>
